# FATUM-Mark2

./: README.md
.github/workflows/: rust.yml
fatum-mark2/: Cargo.toml  fatum.db  server_log.txt  test_output.txt  verify_frontend.py
fatum-mark2/migrations/: 20240101000000_init.sql  20240523000000_quantum_entropy.sql
fatum-mark2/src/: db.rs  lib.rs  main.rs
fatum-mark2/src/cli/: handler.rs
fatum-mark2/src/client/: mod.rs
fatum-mark2/src/engine/: mod.rs  tests.rs  timeline.rs
fatum-mark2/src/server/: mod.rs
fatum-mark2/src/services/: entropy.rs
fatum-mark2/src/tools/: astronomy.rs  chinese_meta.rs  da_liu_ren.rs  decision.rs  divination.rs  entanglement.rs  entanglement_tests.rs  feng_shui.rs  feng_shui_tests.rs  geolocation.rs  mod.rs  pdf_generator.rs  qimen.rs  san_he.rs  ze_ri.rs  zi_wei.rs
fatum-mark2/static/: editor.css  editor.js  iching.json  index.html  visual_da_liu_ren.js  visual_feng_shui.js  visual_many_worlds.js  visual_ze_ri.js  visual_zi_wei.js
verification/: dummy.html  verify.py  verify_editor.py  verify_ui.py
