[package]
name = "fatum-mark2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"
axum = "0.8.7"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
