[package]
name = "fatum-mark2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
geo = "0.28"
