[package]
name = "fatum-mark2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
genpdf = "0.2"
image = "0.24"
font-kit = "0.13"

# Bundled SQLite for easy Windows compilation
[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
